# Role-Aware-Contextual-Retrieval-AI

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: agents.py  gradio_ui.py  racra.py  streaming_api.py  supabase_ops.py  tools.py  utils.py
